KN-13469 fixed issue: long scope is not visible in editor window

--- a/Core/Resources/Css/style.css
+++ b/Core/Resources/Css/style.css
@@ -291,7 +291,7 @@ div#localization div.popup div#resources div#edit div#scope
 	padding: 5px;
 	margin-bottom: 10px;
 	font-family: Trebuchet MS;
-	font-size: 13pt;
+	font-size: 10.5pt;
 	color: #fff;
 	height: 25px;
 	line-height: 25px;
